// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartTrialModalContent Rendering test that adding a source query param updates the button text 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-xxxlarge"
  >
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--padding-top-xxlarge"
    >
      common.purpose.welcome
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="ce-main"
      >
        <svg
          fill="none"
          height="25"
          viewBox="0 0 24 24"
          width="25"
        >
          <path
            clip-rule="evenodd"
            d="M1.01 16.246c.149 2.325 2.003 4.128 4.234 4.117H18.15c2.693 0 5.038-1.92 5.68-4.652.642-2.732-.584-5.569-2.97-6.872-1.227-.67-1.79-.793-2.543-.793-.752 0-1.499.157-2.442.993a.591.591 0 01-.58.219.615.615 0 01-.463-.426.653.653 0 01.136-.629c.585-.69.859-.825 1.564-1.084.705-.26.964-.26 1.777 0-2.023-3.007-6.296-4.078-9.292-2.152-2.997 1.927-4.04 5.956-2.382 9.198a.657.657 0 01-.019.632.6.6 0 01-.533.3.603.603 0 01-.515-.334 8.472 8.472 0 01-.89-3.19c-2.212.302-3.819 2.348-3.67 4.673zm12.345-3.213l.21.053c.566.14 1.89.465 1.89 1.883 0 1.169-.858 1.937-2.271 2.073v.586a.208.208 0 01-.207.207h-.52a.208.208 0 01-.207-.207v-.591c-.72-.08-1.342-.347-1.75-.759-.377-.382-.573-.876-.582-1.47h1.288c.035.786.617 1.252 1.57 1.252.327 0 1.393-.067 1.393-.92 0-.683-.792-.878-1.63-1.083a21.277 21.277 0 01-.434-.11c-.948-.25-1.96-.621-1.96-1.85 0-1.222 1.035-1.843 2.105-1.953V9.54c0-.115.093-.208.207-.208h.52c.114 0 .207.093.207.208v.627c.817.115 2.003.532 2.043 1.985h-1.29c-.07-.689-.53-1.024-1.406-1.024-.507 0-1.1.221-1.1.845 0 .564.332.65 1.924 1.059z"
            fill="url(#ce-main_svg__paint0_linear)"
            fill-rule="evenodd"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ce-main_svg__paint0_linear"
              x1="-6.429"
              x2="2.371"
              y1="9.286"
              y2="28.433"
            >
              <stop
                stop-color="#00CFDE"
              />
              <stop
                offset="1"
                stop-color="#05A660"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
      >
        ce.continuous
      </p>
    </div>
    <span
      style="line-height: 2; font-size: small;"
    >
      common.purpose.ce.description
    </span>
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--padding-top-xlarge"
    >
      common.purpose.howToProceed
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card card infoCard selected"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="ce-visibility"
          >
            <svg
              fill="none"
              height="40"
              width="40"
            >
              <path
                d="M0 24.99h3.99V0H0v24.99zm7.98 0h3.99V7.403H7.98V24.99zm7.98-10.181v10.18h3.99V14.81h-3.99z"
                fill="#0278D5"
                opacity="0.3"
              />
              <g
                clip-path="url(#ce-visibility_svg__clip0)"
              >
                <path
                  d="M30.014 27.178l-4.198-3.895c1.008-1.409 1.598-3.096 1.598-4.91 0-4.914-4.31-8.912-9.606-8.912-5.297 0-9.606 3.998-9.606 8.912 0 4.915 4.31 8.913 9.606 8.913 1.955 0 3.773-.547 5.292-1.482l4.196 3.895c.376.348.984.348 1.359 0l1.358-1.26a.846.846 0 000-1.26zm-19.89-8.805c0-3.93 3.447-7.13 7.684-7.13s7.684 3.2 7.684 7.13c0 3.932-3.447 7.13-7.684 7.13s-7.685-3.198-7.685-7.13z"
                  fill="#0278D5"
                />
              </g>
              <defs>
                <clippath
                  id="ce-visibility_svg__clip0"
                >
                  <path
                    d="M0 0h23.054v21.39H0z"
                    fill="#fff"
                    transform="translate(8.202 9.46)"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
              >
                common.ce.cost
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
            >
              common.ce.visibility
            </p>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small"
        >
          common.purpose.ce.visibilityCard.description
        </p>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card card infoCard Card--disabled"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="ce-optimization"
          >
            <svg
              fill="none"
              height="40"
              width="40"
            >
              <path
                d="M31.217 12.9l-3.772-.466a9.684 9.684 0 00-1.055-2.362l2.312-2.805a.417.417 0 00-.042-.58l-2.686-2.492a.5.5 0 00-.624-.038l-3.024 2.145a11.331 11.331 0 00-2.545-.98l-.503-3.499a.465.465 0 00-.471-.383h-3.8a.464.464 0 00-.47.383l-.503 3.5c-.9.226-1.754.558-2.545.979L8.465 4.156a.501.501 0 00-.624.039L5.155 6.687a.417.417 0 00-.042.58l2.313 2.805a9.679 9.679 0 00-1.056 2.361l-3.772.467a.454.454 0 00-.412.437v3.525c0 .22.176.408.412.437l3.771.466a9.678 9.678 0 001.056 2.362l-2.312 2.806a.417.417 0 00.041.579l2.687 2.492c.092.086.213.13.336.13.101 0 .203-.03.288-.091l3.024-2.146c.791.42 1.645.752 2.545.98l.503 3.499c.031.22.233.383.47.383h3.8c.238 0 .44-.163.47-.383l.503-3.499a11.33 11.33 0 002.546-.98l3.023 2.146c.086.061.188.09.289.09a.494.494 0 00.336-.128l2.686-2.493a.417.417 0 00.042-.579l-2.312-2.805a9.682 9.682 0 001.055-2.362l3.772-.467a.454.454 0 00.412-.437v-3.525a.453.453 0 00-.412-.437zm-14.31 6.165c-2.36 0-4.274-1.775-4.274-3.965s1.914-3.966 4.274-3.966c2.361 0 4.274 1.775 4.274 3.966 0 2.19-1.913 3.965-4.274 3.965z"
                fill="#0278D5"
                opacity="0.3"
              />
              <path
                d="M1.71 20.136l5.428 5.035 8.684-8.057 4.342 4.029L39.703 1"
                stroke="#0278D5"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
          </span>
          <div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
              >
                common.ce.cost
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
            >
              common.ce.optimization
            </p>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small"
        >
          common.purpose.ce.optimizationCard.description
        </p>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-medium StyledProps--intent-warning StyledProps--flex StyledProps--flex-justifyContent-start StyledProps--background-yellow100 StyledProps--font-align-center StyledProps--border StyledProps--border-color-yellow500"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="deployment-incomplete-new"
        style="margin-right: 10px;"
      >
        <svg
          height="25"
          viewBox="0 0 14 14"
          width="25"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M7 0a7 7 0 110 14A7 7 0 017 0"
              fill="#ff8f3f"
            />
            <rect
              fill="#ff8f3f"
              height="14"
              rx="4"
              width="14"
            />
            <path
              d="M6.4 5.1l-.1-1.3h1.5v1.3l-.3 3h-1zm-.3 4.5c0-.5.3-1 .9-1s.9.4.9 1-.3 1-.9 1-.9-.4-.9-1z"
              fill="#fff"
            />
          </g>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
      >
        common.ce.visibilityWarning
      </p>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--border StyledProps--font StyledProps--font-align-center StyledProps--padding-medium StyledProps--intent-primary Button--with-current-color"
      style="width: 270px; height: 2.5px;"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        continue
      </span>
    </button>
  </div>
</div>
`;

exports[`StartTrialModalContent Rendering test that the warning container renders 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-xxxlarge"
  >
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--padding-top-xxlarge"
    >
      common.purpose.welcome
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="ce-main"
      >
        <svg
          fill="none"
          height="25"
          viewBox="0 0 24 24"
          width="25"
        >
          <path
            clip-rule="evenodd"
            d="M1.01 16.246c.149 2.325 2.003 4.128 4.234 4.117H18.15c2.693 0 5.038-1.92 5.68-4.652.642-2.732-.584-5.569-2.97-6.872-1.227-.67-1.79-.793-2.543-.793-.752 0-1.499.157-2.442.993a.591.591 0 01-.58.219.615.615 0 01-.463-.426.653.653 0 01.136-.629c.585-.69.859-.825 1.564-1.084.705-.26.964-.26 1.777 0-2.023-3.007-6.296-4.078-9.292-2.152-2.997 1.927-4.04 5.956-2.382 9.198a.657.657 0 01-.019.632.6.6 0 01-.533.3.603.603 0 01-.515-.334 8.472 8.472 0 01-.89-3.19c-2.212.302-3.819 2.348-3.67 4.673zm12.345-3.213l.21.053c.566.14 1.89.465 1.89 1.883 0 1.169-.858 1.937-2.271 2.073v.586a.208.208 0 01-.207.207h-.52a.208.208 0 01-.207-.207v-.591c-.72-.08-1.342-.347-1.75-.759-.377-.382-.573-.876-.582-1.47h1.288c.035.786.617 1.252 1.57 1.252.327 0 1.393-.067 1.393-.92 0-.683-.792-.878-1.63-1.083a21.277 21.277 0 01-.434-.11c-.948-.25-1.96-.621-1.96-1.85 0-1.222 1.035-1.843 2.105-1.953V9.54c0-.115.093-.208.207-.208h.52c.114 0 .207.093.207.208v.627c.817.115 2.003.532 2.043 1.985h-1.29c-.07-.689-.53-1.024-1.406-1.024-.507 0-1.1.221-1.1.845 0 .564.332.65 1.924 1.059z"
            fill="url(#ce-main_svg__paint0_linear)"
            fill-rule="evenodd"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ce-main_svg__paint0_linear"
              x1="-6.429"
              x2="2.371"
              y1="9.286"
              y2="28.433"
            >
              <stop
                stop-color="#00CFDE"
              />
              <stop
                offset="1"
                stop-color="#05A660"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
      >
        ce.continuous
      </p>
    </div>
    <span
      style="line-height: 2; font-size: small;"
    >
      common.purpose.ce.description
    </span>
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--padding-top-xlarge"
    >
      common.purpose.howToProceed
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card card infoCard selected"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="ce-visibility"
          >
            <svg
              fill="none"
              height="40"
              width="40"
            >
              <path
                d="M0 24.99h3.99V0H0v24.99zm7.98 0h3.99V7.403H7.98V24.99zm7.98-10.181v10.18h3.99V14.81h-3.99z"
                fill="#0278D5"
                opacity="0.3"
              />
              <g
                clip-path="url(#ce-visibility_svg__clip0)"
              >
                <path
                  d="M30.014 27.178l-4.198-3.895c1.008-1.409 1.598-3.096 1.598-4.91 0-4.914-4.31-8.912-9.606-8.912-5.297 0-9.606 3.998-9.606 8.912 0 4.915 4.31 8.913 9.606 8.913 1.955 0 3.773-.547 5.292-1.482l4.196 3.895c.376.348.984.348 1.359 0l1.358-1.26a.846.846 0 000-1.26zm-19.89-8.805c0-3.93 3.447-7.13 7.684-7.13s7.684 3.2 7.684 7.13c0 3.932-3.447 7.13-7.684 7.13s-7.685-3.198-7.685-7.13z"
                  fill="#0278D5"
                />
              </g>
              <defs>
                <clippath
                  id="ce-visibility_svg__clip0"
                >
                  <path
                    d="M0 0h23.054v21.39H0z"
                    fill="#fff"
                    transform="translate(8.202 9.46)"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
              >
                common.ce.cost
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
            >
              common.ce.visibility
            </p>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small"
        >
          common.purpose.ce.visibilityCard.description
        </p>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card card infoCard Card--disabled"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="ce-optimization"
          >
            <svg
              fill="none"
              height="40"
              width="40"
            >
              <path
                d="M31.217 12.9l-3.772-.466a9.684 9.684 0 00-1.055-2.362l2.312-2.805a.417.417 0 00-.042-.58l-2.686-2.492a.5.5 0 00-.624-.038l-3.024 2.145a11.331 11.331 0 00-2.545-.98l-.503-3.499a.465.465 0 00-.471-.383h-3.8a.464.464 0 00-.47.383l-.503 3.5c-.9.226-1.754.558-2.545.979L8.465 4.156a.501.501 0 00-.624.039L5.155 6.687a.417.417 0 00-.042.58l2.313 2.805a9.679 9.679 0 00-1.056 2.361l-3.772.467a.454.454 0 00-.412.437v3.525c0 .22.176.408.412.437l3.771.466a9.678 9.678 0 001.056 2.362l-2.312 2.806a.417.417 0 00.041.579l2.687 2.492c.092.086.213.13.336.13.101 0 .203-.03.288-.091l3.024-2.146c.791.42 1.645.752 2.545.98l.503 3.499c.031.22.233.383.47.383h3.8c.238 0 .44-.163.47-.383l.503-3.499a11.33 11.33 0 002.546-.98l3.023 2.146c.086.061.188.09.289.09a.494.494 0 00.336-.128l2.686-2.493a.417.417 0 00.042-.579l-2.312-2.805a9.682 9.682 0 001.055-2.362l3.772-.467a.454.454 0 00.412-.437v-3.525a.453.453 0 00-.412-.437zm-14.31 6.165c-2.36 0-4.274-1.775-4.274-3.965s1.914-3.966 4.274-3.966c2.361 0 4.274 1.775 4.274 3.966 0 2.19-1.913 3.965-4.274 3.965z"
                fill="#0278D5"
                opacity="0.3"
              />
              <path
                d="M1.71 20.136l5.428 5.035 8.684-8.057 4.342 4.029L39.703 1"
                stroke="#0278D5"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
          </span>
          <div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
              >
                common.ce.cost
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
            >
              common.ce.optimization
            </p>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small"
        >
          common.purpose.ce.optimizationCard.description
        </p>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-medium StyledProps--intent-warning StyledProps--flex StyledProps--flex-justifyContent-start StyledProps--background-yellow100 StyledProps--font-align-center StyledProps--border StyledProps--border-color-yellow500"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="deployment-incomplete-new"
        style="margin-right: 10px;"
      >
        <svg
          height="25"
          viewBox="0 0 14 14"
          width="25"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M7 0a7 7 0 110 14A7 7 0 017 0"
              fill="#ff8f3f"
            />
            <rect
              fill="#ff8f3f"
              height="14"
              rx="4"
              width="14"
            />
            <path
              d="M6.4 5.1l-.1-1.3h1.5v1.3l-.3 3h-1zm-.3 4.5c0-.5.3-1 .9-1s.9.4.9 1-.3 1-.9 1-.9-.4-.9-1z"
              fill="#fff"
            />
          </g>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
      >
        common.ce.visibilityWarning
      </p>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--border StyledProps--font StyledProps--font-align-center StyledProps--padding-medium StyledProps--intent-primary Button--with-current-color"
      style="width: 270px; height: 2.5px;"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.launchFirstGen
      </span>
    </button>
  </div>
</div>
`;

exports[`StartTrialModalContent Rendering that the content renders 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-xxxlarge"
  >
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--padding-top-xxlarge"
    >
      common.purpose.welcome
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="ce-main"
      >
        <svg
          fill="none"
          height="25"
          viewBox="0 0 24 24"
          width="25"
        >
          <path
            clip-rule="evenodd"
            d="M1.01 16.246c.149 2.325 2.003 4.128 4.234 4.117H18.15c2.693 0 5.038-1.92 5.68-4.652.642-2.732-.584-5.569-2.97-6.872-1.227-.67-1.79-.793-2.543-.793-.752 0-1.499.157-2.442.993a.591.591 0 01-.58.219.615.615 0 01-.463-.426.653.653 0 01.136-.629c.585-.69.859-.825 1.564-1.084.705-.26.964-.26 1.777 0-2.023-3.007-6.296-4.078-9.292-2.152-2.997 1.927-4.04 5.956-2.382 9.198a.657.657 0 01-.019.632.6.6 0 01-.533.3.603.603 0 01-.515-.334 8.472 8.472 0 01-.89-3.19c-2.212.302-3.819 2.348-3.67 4.673zm12.345-3.213l.21.053c.566.14 1.89.465 1.89 1.883 0 1.169-.858 1.937-2.271 2.073v.586a.208.208 0 01-.207.207h-.52a.208.208 0 01-.207-.207v-.591c-.72-.08-1.342-.347-1.75-.759-.377-.382-.573-.876-.582-1.47h1.288c.035.786.617 1.252 1.57 1.252.327 0 1.393-.067 1.393-.92 0-.683-.792-.878-1.63-1.083a21.277 21.277 0 01-.434-.11c-.948-.25-1.96-.621-1.96-1.85 0-1.222 1.035-1.843 2.105-1.953V9.54c0-.115.093-.208.207-.208h.52c.114 0 .207.093.207.208v.627c.817.115 2.003.532 2.043 1.985h-1.29c-.07-.689-.53-1.024-1.406-1.024-.507 0-1.1.221-1.1.845 0 .564.332.65 1.924 1.059z"
            fill="url(#ce-main_svg__paint0_linear)"
            fill-rule="evenodd"
          />
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ce-main_svg__paint0_linear"
              x1="-6.429"
              x2="2.371"
              y1="9.286"
              y2="28.433"
            >
              <stop
                stop-color="#00CFDE"
              />
              <stop
                offset="1"
                stop-color="#05A660"
              />
            </lineargradient>
          </defs>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
      >
        ce.continuous
      </p>
    </div>
    <span
      style="line-height: 2; font-size: small;"
    >
      common.purpose.ce.description
    </span>
    <h1
      class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--padding-top-xlarge"
    >
      common.purpose.howToProceed
    </h1>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card card infoCard selected"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="ce-visibility"
          >
            <svg
              fill="none"
              height="40"
              width="40"
            >
              <path
                d="M0 24.99h3.99V0H0v24.99zm7.98 0h3.99V7.403H7.98V24.99zm7.98-10.181v10.18h3.99V14.81h-3.99z"
                fill="#0278D5"
                opacity="0.3"
              />
              <g
                clip-path="url(#ce-visibility_svg__clip0)"
              >
                <path
                  d="M30.014 27.178l-4.198-3.895c1.008-1.409 1.598-3.096 1.598-4.91 0-4.914-4.31-8.912-9.606-8.912-5.297 0-9.606 3.998-9.606 8.912 0 4.915 4.31 8.913 9.606 8.913 1.955 0 3.773-.547 5.292-1.482l4.196 3.895c.376.348.984.348 1.359 0l1.358-1.26a.846.846 0 000-1.26zm-19.89-8.805c0-3.93 3.447-7.13 7.684-7.13s7.684 3.2 7.684 7.13c0 3.932-3.447 7.13-7.684 7.13s-7.685-3.198-7.685-7.13z"
                  fill="#0278D5"
                />
              </g>
              <defs>
                <clippath
                  id="ce-visibility_svg__clip0"
                >
                  <path
                    d="M0 0h23.054v21.39H0z"
                    fill="#fff"
                    transform="translate(8.202 9.46)"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
              >
                common.ce.cost
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
            >
              common.ce.visibility
            </p>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small"
        >
          common.purpose.ce.visibilityCard.description
        </p>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card card infoCard Card--disabled"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="ce-optimization"
          >
            <svg
              fill="none"
              height="40"
              width="40"
            >
              <path
                d="M31.217 12.9l-3.772-.466a9.684 9.684 0 00-1.055-2.362l2.312-2.805a.417.417 0 00-.042-.58l-2.686-2.492a.5.5 0 00-.624-.038l-3.024 2.145a11.331 11.331 0 00-2.545-.98l-.503-3.499a.465.465 0 00-.471-.383h-3.8a.464.464 0 00-.47.383l-.503 3.5c-.9.226-1.754.558-2.545.979L8.465 4.156a.501.501 0 00-.624.039L5.155 6.687a.417.417 0 00-.042.58l2.313 2.805a9.679 9.679 0 00-1.056 2.361l-3.772.467a.454.454 0 00-.412.437v3.525c0 .22.176.408.412.437l3.771.466a9.678 9.678 0 001.056 2.362l-2.312 2.806a.417.417 0 00.041.579l2.687 2.492c.092.086.213.13.336.13.101 0 .203-.03.288-.091l3.024-2.146c.791.42 1.645.752 2.545.98l.503 3.499c.031.22.233.383.47.383h3.8c.238 0 .44-.163.47-.383l.503-3.499a11.33 11.33 0 002.546-.98l3.023 2.146c.086.061.188.09.289.09a.494.494 0 00.336-.128l2.686-2.493a.417.417 0 00.042-.579l-2.312-2.805a9.682 9.682 0 001.055-2.362l3.772-.467a.454.454 0 00.412-.437v-3.525a.453.453 0 00-.412-.437zm-14.31 6.165c-2.36 0-4.274-1.775-4.274-3.965s1.914-3.966 4.274-3.966c2.361 0 4.274 1.775 4.274 3.966 0 2.19-1.913 3.965-4.274 3.965z"
                fill="#0278D5"
                opacity="0.3"
              />
              <path
                d="M1.71 20.136l5.428 5.035 8.684-8.057 4.342 4.029L39.703 1"
                stroke="#0278D5"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
          </span>
          <div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
              >
                common.ce.cost
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
            >
              common.ce.optimization
            </p>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small"
        >
          common.purpose.ce.optimizationCard.description
        </p>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-medium StyledProps--intent-warning StyledProps--flex StyledProps--flex-justifyContent-start StyledProps--background-yellow100 StyledProps--font-align-center StyledProps--border StyledProps--border-color-yellow500"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="deployment-incomplete-new"
        style="margin-right: 10px;"
      >
        <svg
          height="25"
          viewBox="0 0 14 14"
          width="25"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M7 0a7 7 0 110 14A7 7 0 017 0"
              fill="#ff8f3f"
            />
            <rect
              fill="#ff8f3f"
              height="14"
              rx="4"
              width="14"
            />
            <path
              d="M6.4 5.1l-.1-1.3h1.5v1.3l-.3 3h-1zm-.3 4.5c0-.5.3-1 .9-1s.9.4.9 1-.3 1-.9 1-.9-.4-.9-1z"
              fill="#fff"
            />
          </g>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
      >
        common.ce.visibilityWarning
      </p>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--border StyledProps--font StyledProps--font-align-center StyledProps--padding-medium StyledProps--intent-primary Button--with-current-color"
      style="width: 270px; height: 2.5px;"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.launchFirstGen
      </span>
    </button>
  </div>
</div>
`;
